gccida/c3/const_binop_1
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/const_binop_1/src/fold-const.c:2187:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v1; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/const_binop_1/src/fold-const.c:2198:29: error: use of undeclared identifier 'machine_mode'
real_value_truncate( &v3, ( machine_mode)( ( unsigned __int8)HIBYTE( WORD2( type->block.abstract_origin)) >> 1), value); 
                            ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/const_binop_1/src/obj/fold-const.o] Error 1
